Refactoring section spacing issues.

--- a/public/asset/stylesheet/style.css
+++ b/public/asset/stylesheet/style.css
@@ -942,7 +942,7 @@ input::-webkit-input-placeholder {
     position: relative;
 }
 #mainnav .menu > li > a {
-    line-height: 90px;
+    line-height: 60px;
     font-weight: 600;
     display: inline-block;
     padding: 0 19px;
